infrastructure/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcr-inge
  namespace: pcr
  labels:
    app: pcr-inge
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pcr-inge
  template:
    metadata:
      labels:
        app: pcr-inge
        tier: frontend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: pcr-inge
          image: kallepan/pcr-inge
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/nginx", "-s", "quit"]
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
