infrastructure/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inge-service
  namespace: pcr
  labels:
    app: pcr-inge
    tier: frontend
spec:
  selector:
    app: pcr-inge
    tier: frontend
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
