infrastructure/staging/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: inge-ingress
  namespace: pcr
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`pcr-inge.dev-k8s.labmed.de`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
      namespace: pcr
    services:
    - kind: Service
      name: inge-service
      namespace: pcr
      passHostHeader: true
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: pcr
spec:
  redirectScheme:
    scheme: https
    permanent: true
